--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -29,17 +29,15 @@
   margin-left: 0.5rem;
 }
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
+.footer a,
 .title a {
   color: #0070f3;
   text-decoration: none;
 }
 
+.footer a:hover,
+.footer a:focus,
+.footer a:active,
 .title a:hover,
 .title a:focus,
 .title a:active {
