--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,5 @@
 .container {
+  min-width: 650px;
   min-height: 100vh;
   padding: 0 0.5rem;
   display: flex;
@@ -8,6 +9,7 @@
 }
 
 .main {
+  width: 600px;
   padding: 5rem 0;
   flex: 1;
   display: flex;
@@ -16,11 +18,20 @@
   align-items: center;
 }
 
+.oTerm {
+  font-style: italic;
+}
+
+.oDescription {
+  padding-bottom: 7px;
+}
+
 .footer {
   width: 100%;
   height: 100px;
   border-top: 1px solid #eaeaea;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
